[tool.poetry]
name = "python-template"
version = "1"
description = "tiktok share bot"
authors = ["iliya"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
urllib3 = "^1.26.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"